# xfr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DESIGN.md  Dockerfile.release  KNOWN_ISSUES.md  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  deny.toml  flake.nix  install.sh  test-control-channel-skew.sh  test-mptcp-ns.sh  test-mtu-probe-ns.sh
.github/: FUNDING.yml
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: throughput.rs
doc/: xfr.1
docker/: Dockerfile.repro  README.md  repro-issue-70.sh
docs/: ARCHITECTURE.md  COMPARISON.md  FEATURES.md  SCRIPTING.md  demo.tape  xfr.1
examples/: config.toml  grafana-dashboard.json
scripts/: verify-target-binary.sh
src/: acl.rs  audit.rs  auth.rs  client.rs  config.rs  control_crypto.rs  diff.rs  discover.rs  lib.rs  main.rs  net.rs  pause.rs  prefs.rs  probe.rs  protocol.rs  quic.rs  rate_limit.rs  serve.rs  stats.rs  tcp.rs  tcp_info.rs  tls.rs  udp.rs  update.rs  zerocopy.rs
src/backend/: mod.rs  tokio_backend.rs  uring.rs
src/output/: csv.rs  json.rs  mod.rs  plain.rs  prometheus.rs  push_gateway.rs
src/tui/: app.rs  mod.rs  server.rs  settings.rs  theme.rs  ui.rs  widgets.rs
tests/: integration.rs  protocol.rs  udp_live_loss_path.rs
