[package]
name = "xfr"
version = "0.1.0"
edition = "2024"
description = "Modern network bandwidth testing with TUI"
license = "MIT"
repository = "https://github.com/lance0/xfr"
keywords = ["network", "bandwidth", "iperf", "benchmark", "tui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "time", "sync", "rt-multi-thread", "macros"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Metrics
prometheus = { version = "0.13", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }

# Discovery
mdns-sd = { version = "0.11", optional = true }

# Misc
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
humantime = "2"
bytesize = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hostname = "0.4"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["discovery"]
prometheus = ["dep:prometheus", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]
discovery = ["dep:mdns-sd"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
