[package]
name = "xfr"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Modern network bandwidth testing with TUI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lance0/xfr"
keywords = ["network", "bandwidth", "iperf", "benchmark", "tui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "time", "sync", "rt-multi-thread", "macros"] }
futures = "0.3"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Metrics
prometheus = { version = "0.14", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }

# Discovery
mdns-sd = { version = "0.17", optional = true }

# Config
toml = "0.9"
dirs = "6"

# Misc
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
humantime = "2"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
once_cell = "1"
chrono = "0.4"

# Push gateway
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["discovery"]
prometheus = ["dep:prometheus", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]
discovery = ["dep:mdns-sd"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
